# CUBVH

./: .gitignore  AUTOMATIC_MEMORY_CLEANUP.md  CPU_LOADING.md  LICENSE_KIUI  MEMORY_MANAGEMENT_FIX.md  TRIANGLE_SERIALIZATION.md  changelog.md  install.sh  readme.md  requirements.txt  setup.py  test_cpu_loading.py  test_cpu_loading_enhanced.py
cubvh/: api.py
include/cubvh/: api.h  bvh.cuh  gpu_memory.h
src/: api.cu  bindings.cpp
test/: mesh.ply  skinning.py  test.py  test_automatic_cleanup.py  test_basic_cleanup.py  test_device.py  test_memory_fix.py  test_pickle.py  test_simple_cleanup.py  test_triangle_serialization.py
trash/: pyproject.toml
