[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "torch>=1.12.0",
    "ninja",
    "pybind11",
]
build-backend = "setuptools.build_meta"

[project]
name = "cubvh"
version = "0.1.0"
description = "CUDA BVH implementation with device support and serialization"
authors = [
    {name = "cuBVH Team"}
]
license = {file = "LICENSE"}
readme = "readme.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=1.12.0",
    "numpy",
    "trimesh",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "trimesh",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cubvh*"]
